--- a/tools/package.xml
+++ b/tools/package.xml
@@ -8,9 +8,8 @@
 
 	<buildtool_depend>catkin</buildtool_depend>
 
-	<build_depend>rviz</build_depend>
-
 	<depend>moveit_benchmark_suite_core</depend>
+	<depend>rviz</depend>
 
 	<export>
 		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
