Switch to `PNG` terminal for plots
Smaller size footprints and better visuals for small lines compared to SVG.

--- a/moveit/plots/collision_checks.yaml
+++ b/moveit/plots/collision_checks.yaml
@@ -279,7 +279,7 @@ gnuplot_config:
           name: avg_contact_count
           title: '{/:Bold Collision (Self + Environment)}\nCountact count (mean) for scene \"mesh-100-4c\" against requests and collision detectors'
   options:
-    terminal: SVG
+    terminal: PNG
     n_row: 1
     n_col: 1
     size:
