Remove deprecated image type

--- a/moveit/plots/collision_checks.yaml
+++ b/moveit/plots/collision_checks.yaml
@@ -1,4 +1,4 @@
-# create HTML containing multiple SVG pictures
+# create HTML containing multiple pictures
 # ex. use with the default collision check benchmark
 gnuplot_config:
   plots:
