--- a/resources/robots/ur3/urdf/config/visual_parameters_vhacd_h1.yaml
+++ b/resources/robots/ur3/urdf/config/visual_parameters_vhacd_h1.yaml
@@ -6,7 +6,7 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/base.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/base.obj"
 
   shoulder:
     visual:
@@ -15,7 +15,7 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/shoulder.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/shoulder.obj"
 
   upper_arm:
     visual:
@@ -24,7 +24,7 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/upperarm.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/upperarm.obj"
       mesh_files:
 
   forearm:
@@ -34,7 +34,7 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/forearm.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/forearm.obj"
 
   wrist_1:
     visual:
@@ -43,7 +43,7 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/wrist1.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/wrist1.obj"
     visual_offset: -0.085
 
   wrist_2:
@@ -53,7 +53,7 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/wrist2.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/wrist2.obj"
     visual_offset: -0.085
 
   wrist_3:
@@ -63,5 +63,5 @@ mesh_files:
         name: "LightGrey"
         color: "0.7 0.7 0.7 1.0"
     collision:
-      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/wrist3.stl"
+      mesh: "package://moveit_benchmark_suite_resources/robots/ur3/meshes/collision/vhacd_h1/wrist3.obj"
     visual_offset: -0.082
