Add bbt unit mesh box scene for motion planning benchmarks

--- a/moveit/config/motion_planning_mgi.yaml
+++ b/moveit/config/motion_planning_mgi.yaml
@@ -70,6 +70,8 @@ profiler_config:
       resource: package://moveit_benchmark_suite_resources/scenes/empty/empty.urdf.xacro
     - name: primitive
       resource: package://moveit_benchmark_suite_resources/scenes/bbt/panda/primitive.urdf.xacro
+    - name: mesh_primitive
+      resource: package://moveit_benchmark_suite_resources/scenes/bbt/panda/mesh_box_blender.urdf.xacro
     # - name: mesh
     #   resource: package://moveit_benchmark_suite_resources/scenes/bbt/panda/mesh_16k.urdf.xacro
 
