--- a/moveit/config/collision_check.yaml
+++ b/moveit/config/collision_check.yaml
@@ -71,7 +71,7 @@ profiler_config:
           orientation: [0, 0, 0, 1]
         rng_in_collision: 123
         rng_no_collision: 123
-  - name: box-100-nc
+  - name: box-100nc
     resource:
       cluttered_scene:
         robot_state: extended
@@ -94,7 +94,7 @@ profiler_config:
         scale: [0.3, 1.0]
         rng_in_collision: 123
         rng_no_collision: 123
-  - name: mesh-100-nc
+  - name: mesh-100nc
     resource:
       cluttered_scene:
         robot_state: extended
@@ -114,7 +114,7 @@ profiler_config:
   #       scale: [0.3, 1.0]
   #       rng_in_collision: 123
   #       rng_no_collision: 123
-  # - name: mesh-bbox-100-nc
+  # - name: mesh-bbox-100nc
   #   resource:
   #     cluttered_scene:
   #       robot_state: extended
